logs/microblog.log
2024-11-26 17:17:50,833 ERROR: Exception on /reset_password_request [POST] [in D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py:838]
Traceback (most recent call last):
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 1473, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 882, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\app\routes.py", line 164, in reset_password_request
    send_password_reset_email(user)
  File "D:\PROJECTS\FlaskHabr\app\email.py", line 15, in send_password_reset_email
    text_body=render_template('email/reset_password.txt',
              ^^^^^^^^^^^^^^^
NameError: name 'render_template' is not defined
2024-11-26 17:18:29,414 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 12:44:16,443 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 12:51:42,459 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 12:54:06,255 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:00:13,845 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:02:24,468 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:08:33,809 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:08:35,509 ERROR: Exception on / [GET] [in D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py:838]
Traceback (most recent call last):
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 1473, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 882, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\app\routes.py", line 71, in index
    return render_template("index.html", title='Home', form=form, posts=posts.items, next_url=next_url, prev_url=prev_url)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\templating.py", line 150, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\flask\templating.py", line 131, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\jinja2\environment.py", line 1304, in render
    self.environment.handle_exception()
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\jinja2\environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "D:\PROJECTS\FlaskHabr\app\templates\index.html", line 1, in top-level template code
    {% extends "base.html" %}
  File "D:\PROJECTS\FlaskHabr\env\Lib\site-packages\jinja2\environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "D:\PROJECTS\FlaskHabr\app\templates\base.html", line 33, in template
    {% else %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'else'.
2024-11-29 13:19:23,372 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:20:29,803 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:21:27,943 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:23:20,614 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:25:19,870 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
2024-11-29 13:26:14,149 INFO: Microblog startup [in D:\PROJECTS\FlaskHabr\app\__init__.py:49]
